# Mam_Semestralka

./: CMakeLists.txt  TODO.txt
main/: CMakeLists.txt  idf_component.yml  main.c  nvs_config.h  unused_functions.txt
main/alarm_execution/: alarm_execution.c  alarm_execution.h
main/buttons/: buttons.c  buttons.h
main/buzzer/: buzzer.c  buzzer.h
main/display/: display.c  display.h
main/json_parser/: json_parser.c  json_parser.h  reminder.c  reminder.h  task.c  task.h  timetable.c  timetable.h
main/led/: led.c  led.h
main/rfid/: rfid.c  rfid.h
main/ulp/: mainLP.c
main/wifi/: wifi_time.c  wifi_time.h
